--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,21 @@
+*.class
+*.jar
+*jar
+.hg/
+.hgignore
+.lein-deps-sum
+.lein-failures
+.lein-plugins/
+.lein-repl-history
+.nrepl-port
+/.lein-*
+/.nrepl-port
+/checkouts
+/checkouts/
+/classes
+/classes/
+/lib/
+/target
+/target/
 pom.xml
 pom.xml.asc
-*jar
-/lib/
-/classes/
-/target/
-/checkouts/
-.lein-deps-sum
-.lein-repl-history
-.lein-plugins/
-.lein-failures
-.nrepl-port
